# compression

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  compressor.cpp  compressor.h  doctest.h  main.cpp  test.cpp  version.h.in
compressor_impls/: MTF.cpp  RLE.cpp  bwt.cpp  huffman.cpp  range.cpp
inputs/: a_big.txt
